# solauth

./: README.md  package-lock.json  package.json
backend/: .prettierrc  app.js  db.js  package-lock.json  package.json
backend/models/: user.js
backend/routes/: index.js
dapp-frontend/: package-lock.json  package.json
dapp-frontend/public/: index.html  manifest.json
dapp-frontend/src/: App.css  App.js
dapp-frontend/src/components/: ScCommon.js
dapp-frontend/src/components/Breed/: Breed.js  index.js
dapp-frontend/src/components/ConnectButton/: ConnectButton.js  ScConnectButton.js  index.js
dapp-frontend/src/components/Faucet/: Faucet.js  styles.css
dapp-frontend/src/components/HamburgerMenu/: HamburgerMenu.js  ScHamburgerMenu.js  index.js
dapp-frontend/src/components/Header/: Header.js  ScHeader.js
dapp-frontend/src/components/Intoduction/: Introduction.js
dapp-frontend/src/components/IntoductionDex/: Introduction.js  styles.css
dapp-frontend/src/components/IntoductionDoggo/: Introduction.js  styles.css
dapp-frontend/src/components/Liquidity/: Liquidity.js  index.js
dapp-frontend/src/utils/: DexABI.json  RHNABI.json  SVGABI.json  endpoint.js  interaction.js  vendor_abi.json
demo/frontend/: package-lock.json  package.json
demo/frontend/src/: App.js  Login.js  WalletHandler.js  index.css
example_project/frontend/: package-lock.json  package.json
example_project/frontend/src/: App.js  WalletHandler.js  index.css
program/: Address.txt  Cargo.toml  id.json  keypair.json  keypair1.json  keypair2.json  keypair3.json
program/src/: lib.rs
(+20 files in other folders)
